[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcal"
version = "0.1.0"
description = "Experiments with LLMs and calibration"
authors = [{name = "Lautaro Estienne", email = "lestienne@fi.uba.ar"}]
readme = "README.md"
dependencies = [
    "fire>=0.4.0",
    "lightning>=1.5.2",
    "transformers>=4.12.0",
    "datasets>=1.14.0",
    "scikit-learn>=1.0.1",
    "pandas>=1.3.4",
    "matplotlib>=3.5.1",
    "tensorboard>=2.7.0",
    "jupyter>=1.0.0",
    "litgpt>=0.1.0",
    "deepspeed>=0.5.7",
    "sentencepiece>=0.2.0",
    "psrcal>=0.0.2",
    "expected_cost>=0.0.4",
]

[project.urls]
Homepage = "https://github.com/LautaroEst/llmcal"

[project.scripts]
llmcal = "llmcal.__main__:main"
